syntax = "proto3";

package envoy.extensions.filters.listener.mysql_inspector.v3;

import "udpa/annotations/status.proto";
import "udpa/annotations/versioning.proto";

option java_package = "io.envoyproxy.envoy.extensions.filters.listener.mysql_inspector.v3";
option java_outer_classname = "MySQLInspectorProto";
option java_multiple_files = true;
option go_package = "github.com/envoyproxy/go-control-plane/envoy/extensions/filters/listener/mysql_inspector/v3;mysql_inspectorv3";
option (udpa.annotations.file_status).package_version_status = ACTIVE;

// [#protodoc-title: MySQL Inspector Filter]
// Detect whether the application protocol is HTTP.
// [#extension: envoy.filters.listener.mysql_inspector]

message MySQLInspector {
  option (udpa.annotations.versioning).previous_message_type =
      "envoy.config.filter.listener.mysql_inspector.v2.MySQLInspector";
}
